...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/settings_margin">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_text"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/female_radio"
                android:layout_width="wrap_content"
...
