<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.koniukhov.waterreminder.fragments.HomeFragment"
        android:label="DrinkFragment" >
        <action
            android:id="@+id/action_homeFragment_to_starterFragment"
            app:destination="@id/starterFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.koniukhov.waterreminder.fragments.SettingsFragment"
        android:label="SettingsFragment" />
    <fragment
        android:id="@+id/starterFragment"
        android:name="com.koniukhov.waterreminder.fragments.StarterFragment"
        android:label="StarterFragment" >
        <action
            android:id="@+id/action_starterFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/starterFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.koniukhov.waterreminder.fragments.StatisticsFragment"
        android:label="StatisticsFragment" />
</navigation>