...
        android:visibility="@{viewModel.introLayoutVisible ? View.VISIBLE : View.GONE}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_button"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starter_intro_title"
...
                    android:text="@string/male_text"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:alpha='@{viewModel.femaleLayoutAlpha}'
                android:onClick="@{() -> viewModel.setGender(Gender.FEMALE)}">
...
